final no addition

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <container class="grid-container">
-    <div class="grid-row"></div>
-    </container>
+    <header>
+      <div id="context">
+        <p class="p">Choose a number between 2 - 100</p>
+        <input type="number" class="value" /><br /><br />
+      </div>
+      <button class="enter-value-btn">enter</button>
+    </header>
+
+    <container class="grid-container"> </container>
   </body>
 </html>
